// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatInterfacePresets > embedded preset > matches snapshot 1`] = `
{
  "behavior": {
    "autoFocus": false,
  },
  "description": "Compact chat embedded within another component",
  "features": {
    "attachments": {
      "enabled": false,
    },
    "imagePreview": {
      "enabled": true,
    },
    "mentions": {
      "enabled": false,
    },
    "reasoning": {
      "defaultExpanded": false,
      "enabled": true,
    },
    "tools": {
      "enabled": false,
    },
  },
  "name": "embedded",
  "ui": {
    "bubbleStyle": "minimal",
    "density": "compact",
    "mode": "embedded",
    "placeholder": "Type a message...",
    "showAvatars": false,
    "showTimestamps": false,
  },
}
`;

exports[`ChatInterfacePresets > main preset > matches snapshot 1`] = `
{
  "behavior": {
    "autoFocus": true,
  },
  "description": "Full-featured main chat with all capabilities",
  "features": {
    "attachments": {
      "enabled": true,
      "multiple": true,
    },
    "imagePreview": {
      "enabled": true,
    },
    "mentions": {
      "enabled": true,
    },
    "reasoning": {
      "defaultExpanded": false,
      "enabled": true,
    },
    "tools": {
      "enabled": true,
      "toolChoice": "auto",
    },
  },
  "name": "main",
  "ui": {
    "bubbleStyle": "default",
    "density": "comfortable",
    "mode": "full",
    "placeholder": "Type your message...",
    "showAvatars": true,
    "showTimestamps": false,
  },
}
`;

exports[`ChatInterfacePresets > module preset > matches snapshot 1`] = `
{
  "behavior": {
    "autoFocus": false,
  },
  "description": "Module-embedded chat with compact layout and restricted tools",
  "features": {
    "attachments": {
      "enabled": false,
    },
    "imagePreview": {
      "enabled": true,
    },
    "mentions": {
      "enabled": false,
    },
    "reasoning": {
      "defaultExpanded": false,
      "enabled": true,
    },
    "tools": {
      "enabled": false,
    },
  },
  "name": "module",
  "ui": {
    "bubbleStyle": "minimal",
    "density": "compact",
    "mode": "embedded",
    "placeholder": "Ask about this...",
    "showAvatars": false,
    "showTimestamps": false,
  },
}
`;

exports[`ChatInterfacePresets > project preset > matches snapshot 1`] = `
{
  "behavior": {
    "autoFocus": true,
  },
  "description": "Project-scoped chat with back navigation and project badge",
  "features": {
    "attachments": {
      "enabled": true,
      "multiple": true,
    },
    "imagePreview": {
      "enabled": true,
    },
    "mentions": {
      "enabled": true,
    },
    "reasoning": {
      "defaultExpanded": false,
      "enabled": true,
    },
    "tools": {
      "enabled": true,
      "toolChoice": "auto",
    },
  },
  "name": "project",
  "ui": {
    "bubbleStyle": "default",
    "density": "comfortable",
    "mode": "full",
    "placeholder": "Type your message...",
    "showAvatars": true,
    "showTimestamps": false,
  },
}
`;
